[package]
name = "ic-http"
description = "Mocking HTTPS Outcalls on the Internet Computer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.1"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.0"

# Added to use non-blocking sleep to mock delayed responses.
# Currently wasm32 does not support tokio, so we need to disable it for wasm32.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = "1.29.1"

[dev-dependencies]
futures = "0.3.28"
serde_json = "1.0.103"
